# palettizer

./: Cargo.toml  Dockerfile  README.md  config.toml
src/: main.rs
templates/: error.html  index.html
